# kit2d

./: CMakeLists.txt  README.md
example/: Board.cpp  Board.hpp  Brick.hpp  Bricks.cpp  BricksScene.cpp  BricksScene.hpp  PlayScene.cpp  PlayScene.hpp  example.cpp
example/assets/: level.txt
include/: Err.cpp  Err.hpp  Flags.hpp  Kit.hpp  Point.hpp  Rect.hpp  Renderer.hpp  Sprite.hpp  SpriteBatch.hpp  Texture.hpp  TextureRegion.hpp  Vec2.hpp  Vec2f.hpp  Window.hpp  kit2d.hpp
include/kit2d/: core.hpp  scene.hpp  sprite.hpp
include/kit2d/core/: AssetManager.hpp  Atlas.hpp  Context.hpp  Err.hpp  Flags.hpp  Kit.hpp  Point.hpp  Rect.hpp  Renderer.hpp  SDL2.hpp  Texture.hpp  TextureRegion.hpp  TextureView.hpp  Window.hpp  types.hpp
include/kit2d/scene/: Actor.hpp  Director.hpp  Scene.hpp  Stage.hpp
include/kit2d/sprite/: Sprite.hpp  SpriteBatch.hpp  Vec2.hpp
src/: Flags.cpp  Kit.cpp  Renderer.cpp  Renderer.hpp  SDL2.hpp  Texture.cpp  Texture.hpp  TextureRegion.cpp  TextureRegion.hpp  Window.cpp  Window.hpp  kit2d.cpp
src/core/: AssetManager.cpp  Atlas.cpp  Context.cpp  Context.hpp  Err.cpp  Flags.cpp  Kit.cpp  Renderer.cpp  Texture.cpp  TextureView.cpp  Window.cpp
src/scene/: Actor.cpp  Director.cpp  Scene.cpp  Stage.cpp
src/sprite/: Sprite.cpp  SpriteBatch.cpp  Vec2.cpp
